--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackertyper-desktop-application",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "A HackerTyper Desktop Application based on hackertyper.net",
   "main": "main.js",
   "scripts": {
@@ -25,5 +25,9 @@
   "repository": "https://github.com/PandemicMoon/hackertyper",
   "devDependencies": {
     "electron-prebuilt": "^1.2.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0"
   }
 }
